@@ -2,17 +2,17 @@
 /*
  * Gallery - a web based photo album viewer and editor
  * Copyright (C) 2000-2006 Bharat Mediratta
- * 
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or (at
  * your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
@@ -81,22 +81,22 @@ if ($wmDir = opendir($gallery->app->watermarkDir)) {
 	     if(!empty($wmName) && $wmName == $wmFile) {
                  $options[] = array('value' => $wmFile, 'text' => $wmFile, 'selected' => true);
 	     }
-	     else {	
+	     else {
                  $options[] = array('value' => $wmFile, 'text' => $wmFile);
 	     }
         }
     }
     closedir($wmDir);
-    
+
     if(isset($options) && sizeof($options) > 0) {
         echo "<b>". gTranslate('core', "Watermark:") ."</b>&nbsp;";
-        
+
         array_sort_by_fields($options, 'text', 'desc', false);
         if ($watermarkForm["allowNone"]) {
             $options[] = array('value' => '', 'text' => gTranslate('core', "* No Watermark *"), 'selected' => true);
         }
         $options = array_reverse($options);
-        echo drawSelect2('wmName', $options, array(), array('prettyPrinting' => true));
+        echo drawSelect2('wmName', $options);
     }
     else {
         $errors[] = array(
@@ -105,7 +105,7 @@ if ($wmDir = opendir($gallery->app->watermarkDir)) {
 	            "<b>" . $extensions_string . "</b>",
 	            "<b>" . $gallery->app->watermarkDir . "</b>")
     		);
-    } 
+    }
 }
 else {
     $errors[] = array(
