@@ -1,3 +1,14 @@
+2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j91-UNSTABLE
+
+ * Fix: drawSelect in slideshow misbehaved and selected the wrong.
+ 
+ * Use Horde Browser in slideshow to avoid document.write()
+   As a result drawSelect() uses now always pretty printing.
+
+ * drawSelect() now also uses always pretty printing.
+
+ * Found _() -> gTranslate()
+
 2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j90-UNSTABLE
 
  * Added new icons for navigation
